# django-jazz

./: README.md  mkdocs.yml  pyproject.toml
docs/: index.md
docsmk/: mkdocs.yml
